<resources>
    <string name="app_name">Yancım</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="email">E-Posta Adresi</string>
    <string name="password">Parola</string>
    <string name="ask_password">Parola (Min. 6 hane)</string>
    <string name="signup">Kayıt Ol</string>
    <string name="signin">Giriş Yap</string>
    <string name="do_not_have_an_account_text">Hesabın yok mu?</string>
    <string name="have_an_account_text">Hesabın var mı?</string>
    <string name="username_required">Lütfen kullanıcı adı giriniz!</string>
    <string name="email_required">Lütfen e-posta adresinizi giriniz!</string>
    <string name="password_not_valid">Lütfen şifrenizi doğru giriniz!</string>
    <string name="signup_failed">Kayıt başarısız!</string>
    <string name="login_successful">Giriş başarılı!</string>
    <string name="signin_failed">Giriş başarısız!</string>
    <string name="logout">Çıkış Yap</string>
    <string name="greeting_message">Merhaba</string>
    <string name="welcome_to_yancim">Yancım\'a Hoşgeldin!</string>
    <string name="select_city">Şehir Seç</string>
    <string name="game_types">Oyun Türleri</string>
    <string name="rooms">Odalar</string>
    <string name="see_all">Tümünü Gör</string>
    <string name="new_game_type_hint">Oyun Tipi Adı</string>
    <string name="select_image">Resim Ekle</string>
    <string name="add">Kaydet</string>
    <string name="create_game_type_text">Oyun Tipi Ekle</string>
    <string name="create_room_text">Oda oluştur</string>
    <string name="cancel">İptal</string>
    <string name="imageRationaleText">Fotoğraf ekleyebilmeniz için izin vermeniz gerekiyor.</string>
    <string name="selected_text">Seçildi</string>
    <string name="loading_text">Yükleniyor...</string>
    <string name="upload_successful">Dosya başarıyla yüklendi.</string>
    <string name="upload_failed">Dosya yüklenemedi.</string>
    <string name="game_type_added_successfully">Oyun tipi başarıyla eklendi.</string>
    <string name="max_player_count_text">Maximum Oyuncu Sayısı</string>
</resources>