<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboardLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".activity.DashboardActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/greeting_message"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/default_font_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/username"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="@dimen/default_font_size"
        app:layout_constraintStart_toEndOf="@+id/greeting"
        app:layout_constraintTop_toTopOf="@+id/greeting" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/welcome_to_yancim"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/big_font_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/greeting"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/selectCityTextInput"
        style="@style/ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="@dimen/huge_margin"
        android:layout_marginTop="@dimen/huge_margin"
        android:hint="@string/select_city"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage">

        <AutoCompleteTextView
            android:id="@+id/selectCityAutoCompleteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:forceDarkAllowed="false"
            android:inputType="none"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/mainDashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/big_margin"
        android:background="@drawable/ellipse_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectCityTextInput">

        <TextView
            android:id="@+id/gameTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            android:text="@string/game_types"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gameTypesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="@dimen/big_padding">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/rooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/roomsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rooms"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="@dimen/small_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/seeAllText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/see_all"
                android:textAlignment="viewEnd"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/small_font_size"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/roomRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>